--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+	"deploy": "vercel build & vercel deploy --prebuilt"
   },
   "dependencies": {
     "next": "12.3.0",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "eslint-config-next": "12.3.0",
+    "vercel": "^28.2.5"
   }
 }
